# https---github.com-Anatelly-RFID_RC522_STM32F4

./: CMakeLists.txt  README.md  stm32f411.cfg
Core/Inc/: RFID_module.h  include.h  lock.h  low_level.h  main.h  rc522.h  var.h
Core/Src/: RFID_module.c  lock.c  low_level.c  main.c  rc522.c  stm32f4xx_it.c
Drivers/CMSIS/Device/: stm32f4xx.h
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_sd.c
Drivers/iUnilib/Interface/: interface.c  interface.h  interface_collector.c  interface_collector.h  interface_conf.h  termios.h
Drivers/iUnilib/Interface/interface_modules/i2c/: i2c_device.c  i2c_device.h  i2c_ll.c
Drivers/iUnilib/Interface/interface_modules/spi_device/: spi_device.c  spi_device.h  spi_it.c  spi_it.h
Drivers/iUnilib/Interface/interface_modules/sx1276/: sx1276_common.h
Drivers/iUnilib/Interface/interface_modules/sx1276/fsk/: sx1276_fsk.c  sx1276_fsk.h  sx1276_fsk_device.c  sx1276_fsk_device.h
Drivers/iUnilib/Interface/interface_modules/sx1276/lora/: sx1276_lora.c  sx1276_lora.h  sx1276_lora_device.c  sx1276_lora_device.h
Drivers/iUnilib/Interface/interface_modules/uart_device/: uart_device.c  uart_device.h  uart_it.c  uart_it.h
Drivers/iUnilib/Math/: exp_run_average_adaptive.c  exp_run_average_adaptive.h
Drivers/iUnilib/common/: adc_rnd_seed.c  adclib.c  adclib.h  at25df.c  at25df.h  eeprom_protected.c  eeprom_protected.h  endianes.c  fifo.h  flash_hal.c  flash_hal.h  global_macro.h  led.h  pin_macro.h  queue.c  queue.h  servo.c  servo.h  soft_i2c.c  soft_i2c.h  spi_bitbang_conf.h
Drivers/iUnilib/crc/: crc16_xmodem.c  crc16_xmodem.h  crc7.c  crc7.h  crc_hw.c  crc_hw.h  crc_sum.c  crc_sum.h
Drivers/iUnilib/proto/: process_big_filesize.c  process_big_filesize.h  protocolFilter.c  protocolFilter.h  tl_protocol.c  tl_protocol.h  ubx.c  ubx.h
